--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,4 +1,4 @@
 name: container-passthrough-neo
 version: '${version}'
-main: eu.mvojacek.paper.containerpassthrough.ContainerPasthroughNeo
+main: eu.mvojacek.paper.contpassneo.ContainerPassthroughNeo
 api-version: '1.20'
